fix: middleware error, multiple order item
