# controller/orders.controller.js
@@ -5,10 +5,19 @@ const getOrders = async (req, res) => {
   // #swagger.tags = ['Order']
 
   try {
-    const { data, error } = await supabase
+    const user = req.decoded
+
+    let query = supabase
       .from('orders')
       .select(`*,users (id,name,email,isAdmin),order_items (*)`)
-    console.log('data getOrders', data)
+
+    if (!user.isAdmin) {
+      // if user not an admin, get order by user id
+      query = query.eq('customer_id', user.id)
+    }
+
+    const { data: orders, error } = await query
+
     if (error) {
       res.status(500).send(error)
       return
@@ -16,10 +25,35 @@ const getOrders = async (req, res) => {
 
     res.json({
       message: 'Success get all order',
+      data: orders,
+    })
+  } catch (error) {
+    res.status(500).send(error)
+  }
+}
+
+// get order by id
+const getOrderById = async (req, res) => {
+  // #swagger.tags = ['Order']
+  try {
+    const { id } = req.params
+    const { data, error } = await supabase
+      .from('orders')
+      .select(`*,users (id,name,email,isAdmin),order_items (*,books (*))`)
+      .eq('id', id)
+      .single()
+
+    if (error) {
+      res.status(500).send(error)
+      return
+    }
+
+    res.json({
+      message: 'Success get an order',
       data: data,
     })
   } catch (error) {
-    throw new Error(error)
+    res.status(500).send(error)
   }
 }
 
@@ -33,7 +67,7 @@ const createOrder = async (req, res) => {
 
     const { data, error } = await supabase
       .from('orders')
-      .insert([{ customer_id: user.id, total_price }])
+      .insert([{ customer_id: user.id, total_price: total_price || 0 }])
       .select()
 
     if (error) {
@@ -46,8 +80,8 @@ const createOrder = async (req, res) => {
       data: data,
     })
   } catch (error) {
-    throw new Error(error)
+    res.status(500).send(error)
   }
 }
 
-export { getOrders, createOrder }
+export { getOrders, createOrder, getOrderById }
